@@ -36,3 +36,7 @@ val print_one_decl :
 val structure_for_compute :
   Environ.env -> Evd.evar_map -> EConstr.t ->
     Miniml.ml_decl list * Miniml.ml_ast * Miniml.ml_type
+
+(* Show the extraction of the current ongoing proof *)
+
+val show_extraction : unit -> unit
